--- a/01 - JavaScript Drum Kit/style.css
+++ b/01 - JavaScript Drum Kit/style.css
@@ -51,3 +51,12 @@ kbd {
   letter-spacing: 0.1rem;
   color: #ffc600;
 }
+
+.center {
+  color: rgb(255, 255, 255);
+  text-align: center;
+  align-content: center;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  border-color: #ebc419;
+}
